--- a/.env
+++ b/.env
@@ -2,4 +2,4 @@ PORT=3000
 API_URL=https://dev.hockey.cronix.life/api/v1
 LOGGER_URL=https://logger.life/api/v1
 CYPRESS_RECORD_KEY=35f0a87b-761a-493e-9969-4042a5f99ffb
-NODE_PATH=src
+NODE_PATH=src/
