--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.4",
+    "@fortawesome/free-solid-svg-icons": "^5.3.1",
+    "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.0.3",
+    "@types/react-select": "^2.0.3",
+    "@types/react-swipeable-views": "^0.12.2",
     "axios": "^0.18.0",
     "history": "^4.7.2",
     "raven-js": "^3.27.0",
@@ -14,12 +19,12 @@
     "react-router-redux": "^4.0.8",
     "react-scripts-ts": "2.17.0",
     "react-select": "^2.0.0",
+    "react-swipeable-views": "^0.12.17",
     "redux": "^4.0.0",
     "redux-act": "^1.7.4",
     "redux-devtools-extension": "^2.13.5",
     "redux-saga": "^0.16.0",
-    "reselect": "^3.0.1",
-    "typeface-roboto": "0.0.54"
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
