--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^16.5.0",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-router-redux": "^4.0.8",
     "react-scripts-ts": "2.17.0",
     "react-select": "^2.0.0",
@@ -41,6 +42,7 @@
     "@types/react": "^16.4.14",
     "@types/react-dom": "^16.0.7",
     "@types/react-redux": "^6.0.7",
+    "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.15",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
