--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-swipeable-views": "^0.12.17",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
     "reselect": "^3.0.1"
   },
@@ -44,6 +45,7 @@
     "@types/react-redux": "^6.0.7",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-router-redux": "^5.0.15",
+    "@types/redux-logger": "^3.0.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "husky": "^0.14.3",
