--- a/package.json
+++ b/package.json
@@ -7,13 +7,16 @@
     "@fortawesome/free-solid-svg-icons": "^5.3.1",
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.0.3",
+    "@types/file-saver": "^1.3.0",
     "@types/react-select": "^2.0.3",
     "@types/react-swipeable-views": "^0.12.2",
     "axios": "^0.18.0",
+    "file-saver": "^1.3.8",
     "history": "^4.7.2",
     "raven-js": "^3.27.0",
     "react": "^16.5.0",
     "react-dom": "^16.5.0",
+    "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
@@ -22,12 +25,11 @@
     "react-select": "^2.0.0",
     "react-swipeable-views": "^0.12.17",
     "redux": "^4.0.0",
+    "redux-act": "^1.7.4",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "reselect": "^3.0.1",
-    "redux-act": "^1.7.4",
-    "react-modal": "^3.5.1"
+    "reselect": "^3.0.1"
   },
   "scripts": {
     "start": "react-scripts-ts start",
