--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/react-fontawesome": "^0.1.3",
     "@material-ui/core": "^3.0.3",
     "@types/file-saver": "^1.3.0",
+    "@types/react-content-loader": "^3.1.3",
     "@types/react-select": "^2.0.3",
     "@types/react-swipeable-views": "^0.12.2",
     "axios": "^0.18.0",
@@ -15,6 +16,7 @@
     "history": "^4.7.2",
     "raven-js": "^3.27.0",
     "react": "^16.5.0",
+    "react-content-loader": "^3.1.2",
     "react-dom": "^16.5.0",
     "react-modal": "^3.5.1",
     "react-redux": "^5.0.7",
