--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react-select": "^2.0.3",
     "@types/react-swipeable-views": "^0.12.2",
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "file-saver": "^1.3.8",
     "history": "^4.7.2",
     "raven-js": "^3.27.0",
