--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.18.0",
     "file-saver": "^1.3.8",
     "history": "^4.7.2",
+    "immer": "^1.7.2",
     "qs": "^6.5.2",
     "raven-js": "^3.27.0",
     "react": "^16.5.0",
