--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
-    "reselect": "^3.0.1"
+    "reselect": "^3.0.1",
+    "typeface-poppins": "0.0.54"
   },
   "scripts": {
     "start": "react-scripts-ts start",
