--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "@material-ui/core": "^3.0.3",
     "@types/file-saver": "^1.3.0",
     "@types/react-content-loader": "^3.1.3",
+    "@types/react-router": "^4.0.31",
     "@types/react-swipeable-views": "^0.12.2",
     "axios": "^0.18.0",
+    "connected-react-router": "^4.5.0",
     "file-saver": "^1.3.8",
     "history": "^4.7.2",
     "immer": "^1.7.2",
@@ -22,7 +24,6 @@
     "react-redux": "^5.0.7",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-router-redux": "^4.0.8",
     "react-scripts-ts": "2.17.0",
     "react-select": "^2.0.0",
     "react-swipeable-views": "^0.12.17",
@@ -51,7 +52,6 @@
     "@types/react-modal": "^3.2.1",
     "@types/react-redux": "^6.0.7",
     "@types/react-router-dom": "^4.3.1",
-    "@types/react-router-redux": "^5.0.15",
     "@types/redux-logger": "^3.0.6",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
