--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/file-saver": "^1.3.0",
     "@types/react-content-loader": "^3.1.3",
     "@types/react-swipeable-views": "^0.12.2",
+    "@types/react-truncate": "^2.3.3",
     "axios": "^0.18.0",
     "file-saver": "^1.3.8",
     "history": "^4.7.2",
@@ -26,6 +27,7 @@
     "react-scripts-ts": "2.17.0",
     "react-select": "^2.0.0",
     "react-swipeable-views": "^0.12.17",
+    "react-truncate": "^2.4.0",
     "redux": "^4.0.0",
     "redux-devtools-extension": "^2.13.5",
     "redux-logger": "^3.0.6",
