--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@types/file-saver": "^1.3.0",
     "@types/react-content-loader": "^3.1.3",
     "@types/react-router": "^4.0.31",
+    "@types/react-select": "^2.0.4",
     "@types/react-swipeable-views": "^0.12.2",
     "@types/react-truncate": "^2.3.3",
     "axios": "^0.18.0",
