--- a/package.json
+++ b/package.json
@@ -9,32 +9,35 @@
     "@material-ui/core": "^3.0.3",
     "@types/file-saver": "^1.3.0",
     "@types/react-content-loader": "^3.1.3",
+    "@types/react-onclickoutside": "^6.7.0",
     "@types/react-router": "^4.0.31",
     "@types/react-select": "^2.0.4",
     "@types/react-swipeable-views": "^0.12.2",
     "@types/react-truncate": "^2.3.3",
-    "react-scripts-ts": "2.17.0",
     "axios": "^0.18.0",
-    "react": "^16.5.0",
-    "react-dom": "^16.5.0",
-    "react-redux": "^5.0.7",
-    "redux": "^4.0.0",
-    "redux-saga": "^0.16.0",
-    "redux-devtools-extension": "^2.13.5",
-    "redux-logger": "^3.0.6",
-    "react-router": "^4.3.1",
-    "react-router-dom": "^4.3.1",
     "connected-react-router": "^4.5.0",
+    "file-saver": "^1.3.8",
     "history": "^4.7.2",
-    "reselect": "^3.0.1",
     "immer": "^1.7.2",
-    "react-select": "^2.0.0",
     "qs": "^6.5.2",
     "raven-js": "^3.27.0",
-    "file-saver": "^1.3.8",
+    "react": "^16.5.0",
     "react-content-loader": "^3.1.2",
+    "react-dom": "^16.5.0",
+    "react-onclickout": "^2.0.8",
+    "react-onclickoutside": "^6.7.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts-ts": "2.17.0",
+    "react-select": "^2.0.0",
     "react-swipeable-views": "^0.12.17",
     "react-truncate": "^2.4.0",
+    "redux": "^4.0.0",
+    "redux-devtools-extension": "^2.13.5",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "reselect": "^3.0.1",
     "typeface-poppins": "0.0.54"
   },
   "scripts": {
