--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react": "^16.5.0",
     "react-content-loader": "^3.1.2",
     "react-dom": "^16.5.0",
+    "react-hot-loader": "^4.3.11",
     "react-onclickout": "^2.0.8",
     "react-onclickoutside": "^6.7.1",
     "react-redux": "^5.0.7",
